[gd_scene load_steps=3 format=3 uid="uid://dudbuild5w74v"]

[ext_resource type="Script" path="res://scenes/autoloads/save_load.gd" id="1_8qtvo"]
[ext_resource type="PackedScene" uid="uid://nfqyxnke21fw" path="res://scenes/autoloads/save_slot.tscn" id="2_t68an"]

[node name="SaveLoad" type="PopupPanel"]
process_mode = 3
size = Vector2i(576, 324)
visible = true
script = ExtResource("1_8qtvo")
SaveSlot = ExtResource("2_t68an")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 572.0
offset_bottom = 320.0

[node name="New" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "New Slot"

[node name="DeleteAll" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Delete All"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Slots" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="popup_hide" from="." to="." method="_on_popup_hide"]
[connection signal="pressed" from="VBoxContainer/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="VBoxContainer/DeleteAll" to="." method="_on_delete_all_pressed"]
